{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "c70c4d8d-7f1a-408d-a752-0d57bc44c263",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "4835e260-0dfa-4347-9651-298380665d7b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SprintStart",
                    "type": "Button",
                    "id": "29fd3c03-c58e-4d71-8567-d6b8215ee6f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SprintFinish",
                    "type": "Button",
                    "id": "747a5a1f-0e79-4f5d-88eb-1e5399721906",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "a0d7f04f-202a-49bf-8bdf-0cd4bcc1855e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3c70fb98-b583-47e6-9a10-18b994da200a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9d5598df-174d-47fe-ac14-25ab040b6c6f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f32f22f0-5fe3-4bb2-814e-50ff2cd2ebc8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "02d7c843-467d-4a79-8654-7dfdd7a87766",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "014480d7-49e0-4ff9-abe6-156bfe909f4d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ca96e331-a5eb-4d30-965f-cf08ec73cca3",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SprintStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "129e4ca1-6ea7-422c-b4fd-670cf073d65b",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SprintFinish",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "367b7570-988e-41fd-92b0-be88d359f6a2",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}